--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -23,7 +23,9 @@ a {
 }
 body{
   margin-left: 30px;
-  
+  background-image: url('/background.svg') !important;
+  background-size: cover;
+  background-repeat: no-repeat;
   margin-right: 30px;
   
 }
