--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -27,6 +27,7 @@ body {
   background-image: url("/background.svg") !important;
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: bottom;
 }
 
 nav {
@@ -50,5 +51,6 @@ main {
 @media only screen and (max-width: 768px) {
   main {
     max-width: 100% !important;
+    border: 2px solid black;
   }
 }
